# inverse-preference-learning

./: .gitignore  .pre-commit-config.yaml  README.md  environment_cpu.yaml  environment_gpu.yaml  pyproject.toml  setup.cfg  setup.py  setup_shell.sh
configs/12_22/: ih_sweep.json  ih_sweep_chi_reg.json  ihlearn.yaml  pebble.yaml  pebble_sweep.json
configs/3_23/: metaworld_offline.json
configs/3_3/: ih_sweep.json  ih_sweep_target.json  ihlearn.yaml  ihlearn_awac.yaml  ihlearn_awac_drawer_sweep_more_subopt.json  pebble.yaml  pebble_sweep.json  pref_iql.yaml  pref_iql_drawer_sweep_more_subopt.json
configs/4_12/: d4rl_iplearnv.json  d4rl_iplearnv_no_chi_only_pref.json  iplearnv_mw.json  iplearnv_walker_med_exp_sweep.json
configs/4_30/: antmaze.json  antmaze_iql.json  antmaze_pref_iql_tanh.json  locomotion_temps.json  robomimic.json  robomimic_iql_dset_fix.json
configs/5_5/: antmaze_ip_param_sweep.json  antmaze_ip_param_sweep_2.json  antmaze_iplearnv.json  antmaze_pref_iql.json  locomotion_diagnosis_5_11.json  locomotion_final_param_sweep.json  mw_all_clip.json  mw_all_data.json  mw_ip_init_sweep_v2.json  mw_ip_init_sweep_v3.json  mw_pref_iql_init_sweep_v2.json  robomimic_final_param_sweep.json  robomimic_ip_param_sweep.json  (+1 more)
configs/panda/: sac.yaml  (+6 more)
research/: __init__.py
scripts/: create_comparison_dataset.py  create_dataset.py  create_metaworld_dataset.py  create_metaworld_offline_dataset.py  create_pairwise_comparison_dataset.py  create_random_dataset.py  evaluate.py  plot.py  train.py  visualize.py
tools/: cleanup.py  run_local.py  run_slurm.py  utils.py
(+164 files in other folders)
